# steer-clear

./: 123.csv  README.md  clean_dataset.ipynb  cleaned.csv  direction_rank.json  divergence_adapter.pth  eval_temp.csv  figures.ipynb  generate_dataset.ipynb  generate_eval_dataset.ipynb  interpret_mode_outputs.ipynb  interpret_model_outputs.ipynb  main.py  pyproject.toml  scenarios_cleaned.csv  scenarios_model.py  scenarios_raw.csv  scratchpad.ipynb  test.csv  test.ipynb  test2.ipynb  test_phase1.ipynb  test_phase2.ipynb  train.csv  train_phase1.ipynb  train_phase2.ipynb  training_loop.ipynb  training_loop_scratch.py
dataset_code/: clean_dataset.ipynb  clean_dataset.py  config.py  gemini_client.py  generate_dataset.ipynb  generate_dataset.py  scenarios_data.py  scenarios_model.py  train_test_split.ipynb  train_test_split.py
datasets/: full_dataset.csv  scenarios_uncleaned.csv
directions/: model_phase1_divergence_adapter_b12_run_10.pt  model_phase1_divergence_adapter_b12_run_12.pt  model_phase1_divergence_adapter_b12_run_14.pt  model_phase1_divergence_adapter_b12_run_16.pt  model_phase1_divergence_adapter_b12_run_17.pt  model_phase1_divergence_adapter_b12_run_18.pt  model_phase1_divergence_adapter_b12_run_19.pt  model_phase1_divergence_adapter_b12_run_2.pt  model_phase1_divergence_adapter_b12_run_3.pt  model_phase1_divergence_adapter_b12_run_6.pt  model_phase1_divergence_adapter_b12_run_7.pt  model_phase1_divergence_adapter_b12_run_8.pt
directions_code/: direction_config.py  do_directions_converge.ipynb  extract_directions.ipynb  extract_directions.py
(+181 files in other folders)
